--- a/app/src/main/res/layout/activity_lek_dopisz.xml
+++ b/app/src/main/res/layout/activity_lek_dopisz.xml
@@ -3,18 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".pomiary.PomiarEdytuj">
-
-
+    android:padding="16dp"
+    tools:context=".leki.LekDopisz">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextNazwaLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:enabled="false"
         android:layout_marginBottom="16dp"
         android:hint="Nazwa"
         app:endIconMode="clear_text">
@@ -31,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:enabled="false"
         android:hint="Notatka"
         app:endIconMode="clear_text">
 
@@ -41,8 +37,6 @@
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/spinnerLayout"
@@ -68,25 +62,10 @@
         style="@style/Widget.Material3.Button.Icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginHorizontal="24dp"
-        android:onClick="aktualizuj"
-        android:enabled="false"
-        android:text="Aktualizuj pomiar"
-        app:icon="@drawable/ic_update_24" />
-
-    <Button
-        android:id="@+id/button_disable_edit"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="24dp"
-        android:enabled="false"
-        android:onClick="stopEdit"
-        android:text="Anuluj edycie"
-        app:icon="@drawable/ic_clear_24"/>
-
-
+        android:onClick="zapiszNowaPozycia"
+        android:text="Zapisz nowy lek"
+        app:icon="@drawable/ic_add_24" />
 
 </LinearLayout>
