--- a/app/src/main/res/layout/activity_lek_edytuj.xml
+++ b/app/src/main/res/layout/activity_lek_edytuj.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:orientation="vertical"
-    tools:context=".pomiary.PomiarEdytuj">
+    tools:context=".leki.LekEdytuj">
 
 
 
