--- a/app/src/main/res/layout/activity_pomiar_dopisz.xml
+++ b/app/src/main/res/layout/activity_pomiar_dopisz.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".pomiary.PomiaryDopisz">
+    tools:context=".pomiary.PomiarDopisz">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextNazwaLayout"
