zmiana dokładności jednostek na typy zmiennych

--- a/app/src/main/res/layout/activity_etap_terapi.xml
+++ b/app/src/main/res/layout/activity_etap_terapi.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/editTextNotatkaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Notatka"
+                android:hint="Notatka z przebiegu terapi"
                 app:endIconMode="clear_text">
 
                 <com.google.android.material.textfield.TextInputEditText
