--- a/app/src/main/res/layout/activity_jednostki_dopisz.xml
+++ b/app/src/main/res/layout/activity_jednostki_dopisz.xml
@@ -47,43 +47,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:hint="Dokładność">
+            android:hint="Typ zmiennej">
 
             <AutoCompleteTextView
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
-                app:simpleItems="@array/dokladnosc"
+                app:simpleItems="@array/typZmiennej"
 
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/spinner2Layout"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="Zastosowanie">
-
-
-            <AutoCompleteTextView
-                android:id="@+id/spinner2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"
-                app:simpleItems="@array/przeznaczenie"
-
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-        <Button
+    <Button
             android:id="@+id/button_save_edit"
             style="@style/Widget.Material3.Button.Icon"
             android:layout_width="match_parent"
