--- a/app/src/main/res/layout/activity_jednostki_edytuj.xml
+++ b/app/src/main/res/layout/activity_jednostki_edytuj.xml
@@ -46,34 +46,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Dokładność">
+        android:hint="Typ zmiennej">
 
         <AutoCompleteTextView
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"
-            app:simpleItems="@array/dokladnosc"
-
-            />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/spinner2Layout"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="Zastosowanie">
-
-        <AutoCompleteTextView
-            android:id="@+id/spinner2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none"
-            app:simpleItems="@array/przeznaczenie"
+            app:simpleItems="@array/typZmiennej"
 
             />
 
