--- a/app/src/main/res/layout/activity_terapia_cardview.xml
+++ b/app/src/main/res/layout/activity_terapia_cardview.xml
@@ -23,11 +23,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:gravity="left"
-            android:textSize="20sp"
+            android:layout_centerInParent="true"
             android:layout_marginBottom="2dp"
 
-            android:layout_centerInParent="true"/>
+            android:gravity="left"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/opis"
