--- a/app/src/main/res/layout/activity_wpis_pomiar_edytuj.xml
+++ b/app/src/main/res/layout/activity_wpis_pomiar_edytuj.xml
@@ -57,6 +57,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextWynik"
+                android:inputType="numberDecimal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
