--- a/app/src/main/res/layout/fragment_pomiar.xml
+++ b/app/src/main/res/layout/fragment_pomiar.xml
@@ -11,9 +11,7 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_gravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
