--- a/app/src/main/res/menu/menu_object_change_and_delete.xml
+++ b/app/src/main/res/menu/menu_object_change_and_delete.xml
@@ -6,4 +6,8 @@
         android:id="@+id/edit"
         android:title="@string/menu_object_edit"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/drop"
+        android:title="@string/menu_object_drop"
+        app:showAsAction="never"/>
 </menu>
