--- a/app/src/main/res/menu/menu_object_change_and_delete_accaunt.xml
+++ b/app/src/main/res/menu/menu_object_change_and_delete_accaunt.xml
@@ -4,6 +4,10 @@
 
     <item
         android:id="@+id/edit"
-        android:title="@string/menu_object_edit"
+        android:title="Edytuj dane konta"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/drop"
+        android:title="Usuń konto"
         app:showAsAction="never"/>
 </menu>
