--- a/app/src/main/res/layout/activity_pomiar_dopisz.xml
+++ b/app/src/main/res/layout/activity_pomiar_dopisz.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Nazwa"
+        android:hint="@string/nazwa"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Notatka"
+        android:hint="@string/notatka"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="Jednostka">
+        android:hint="@string/jednostka">
 
         <AutoCompleteTextView
             android:id="@+id/spinner"
@@ -65,7 +65,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="24dp"
         android:onClick="zapiszNowaPozycia"
-        android:text="Zapisz nowy pomiar"
+        android:text="@string/zapisz_nowy_pomiar"
         app:icon="@drawable/ic_add_24" />
 
 </LinearLayout>
