--- a/app/src/main/res/layout/chart_view.xml
+++ b/app/src/main/res/layout/chart_view.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
