--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:drawableStart="@drawable/ic_arrow_back_ios_24"
+                android:drawableLeft="@drawable/ic_arrow_back_ios_24"
                 android:drawableTint="@color/white"
                 android:textColor="@color/white"
                 android:text="@string/wcze_niej"
