--- a/app/src/main/res/layout/activity_etap_terapi.xml
+++ b/app/src/main/res/layout/activity_etap_terapi.xml
@@ -16,24 +16,17 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!--            <TextView-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:text="Pomiary" />-->
-
             <LinearLayout
                 android:id="@+id/listaElementow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" />
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editTextNotatkaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Notatka z przebiegu terapi"
+                android:hint="@string/notatka_z_przebiegu_terapii"
                 app:endIconMode="clear_text">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -46,13 +39,12 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/godzinaWykonaniaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:hint="Godzina wykonania pomiaru"
+                android:hint="@string/godzina_wykonania_etapu"
                 app:endIconMode="clear_text">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -65,7 +57,6 @@
                     android:focusableInTouchMode="false" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
 
             <Button
                 android:id="@+id/button_save_edit"
